--- a/index.html
+++ b/index.html
@@ -1,27 +1,62 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Screen Sharing Demo</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Screen Sharing</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 </head>
+
 <body>
-    <h1>Screen Sharing Example</h1>
-    <button id="shareScreenButton">Share Screen</button>
-    <video id="screenVideo" autoplay></video>
-
-    <script>
-        const shareScreenButton = document.getElementById('shareScreenButton');
-        const screenVideo = document.getElementById('screenVideo');
-
-        shareScreenButton.addEventListener('click', async () => {
+    <div style="width:80%;background: grey;margin: auto;">
+        <video id="video" autoplay playsinline muted></video>
+    </div>
+    <div style="width:80%;margin: auto;padding-top:10px ;">
+        <button class="btn btn-primary" id="start"> Start Screen Sharing</button>
+        <button class="btn btn-secondary" id="stop"> Stop</button>
+    </div>
+    <script type="text/javascript">
+        const videoElem = document.getElementById("video");
+        const startElem = document.getElementById("start");
+        const stopElem = document.getElementById("stop");
+        // Options for getDisplayMedia()
+        var displayMediaOptions = {
+            video: {
+                cursor: "always",
+                height: 1000,
+                width: 1200
+            },
+            audio: false
+        };
+        // Set event listeners for the start and stop buttons
+        startElem.addEventListener("click", function (evt) {
+            startCapture();
+        }, false);
+        stopElem.addEventListener("click", function (evt) {
+            stopCapture();
+        }, false);
+        async function startCapture() {
             try {
-                const screenStream = await navigator.mediaDevices.getDisplayMedia({ video: true });
-                screenVideo.srcObject = screenStream;
-            } catch (error) {
-                console.error('Error sharing screen:', error);
+                videoElem.srcObject = await navigator.mediaDevices.getDisplayMedia(displayMediaOptions);
+                dumpOptionsInfo();
+            } catch (err) {
+                console.error("Error: " + err);
             }
-        });
+        }
+
+        function stopCapture(evt) {
+            let tracks = videoElem.srcObject.getTracks();
+            tracks.forEach(track => track.stop());
+            videoElem.srcObject = null;
+        }
+
+        function dumpOptionsInfo() {
+            const videoTrack = videoElem.srcObject.getVideoTracks()[0];
+            console.info("Track settings:");
+            console.info(JSON.stringify(videoTrack.getSettings(), null, 2));
+            console.info("Track constraints:");
+            console.info(JSON.stringify(videoTrack.getConstraints(), null, 2));
+        }
     </script>
 </body>
 </html>
